test/should_fail/NonLiteralEnum2.oj

@enum {
	Foo = (4 + 3)
}
